--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.4.0",
     "babel-jest": "^27.5.1",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "rollup": "^2.67.2",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   }
 }
